fix transition bar items squishing

--- a/stylesheets/mediaQ.scss
+++ b/stylesheets/mediaQ.scss
@@ -4,14 +4,6 @@
 		padding: 0 1rem;
 	}
 
-	#main-hero {
-		#transition-bar {
-			&-items {
-				width: 65rem;
-			}
-		}
-	}
-
 	#games-section {
 		&-content {
 			#games-list {
