--- a/stylesheets/style.scss
+++ b/stylesheets/style.scss
@@ -130,7 +130,7 @@ a {
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
-			width: 35%;
+			width: 65rem;
 			height: 100%;
 			margin: 0 auto;
 
